[gd_scene format=3 uid="uid://brto81ffvcavq"]

[ext_resource type="Script" uid="uid://rm3lollcgcdi" path="res://scenes/DifficultyScreen.gd" id="1_flr8e"]
[ext_resource type="Theme" uid="uid://c68li1l2cs3o4" path="res://themes/default_theme.tres" id="2_ll5ts"]
[ext_resource type="AudioStream" uid="uid://eipix70ilsb4" path="res://scenes/creepy-atmosphere-145465.mp3" id="3_ll5ts"]

[node name="Difficulty" type="Control" unique_id=1280998882]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flr8e")

[node name="Panel2" type="Panel" parent="." unique_id=356564814]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Panel" type="Panel" parent="." unique_id=1195815958]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24000001
anchor_top = 0.26900002
anchor_right = 0.76000005
anchor_bottom = 0.731
offset_left = -0.8000183
offset_top = -0.52001953
offset_right = 0.79992676
offset_bottom = 0.52001953

[node name="Label" type="Label" parent="Panel" unique_id=1528631335]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38700002
anchor_top = 0.16600001
anchor_right = 0.58100003
anchor_bottom = 0.20600002
offset_left = -3.0517578e-05
offset_top = -20.000008
theme = ExtResource("2_ll5ts")
theme_override_font_sizes/font_size = 32
text = "Choose Mode"

[node name="HardButton" type="Button" parent="Panel" unique_id=135676980]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.70000005
offset_bottom = -3.0517578e-05
theme = ExtResource("2_ll5ts")
theme_override_font_sizes/font_size = 32
text = "Hard"

[node name="MediumButton" type="Button" parent="Panel" unique_id=464968210]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.70000005
offset_bottom = -3.0517578e-05
theme = ExtResource("2_ll5ts")
theme_override_font_sizes/font_size = 32
text = "Medium"

[node name="EasyButton" type="Button" parent="Panel" unique_id=1636725096]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.749
anchor_top = 0.5
anchor_right = 0.94900006
anchor_bottom = 0.702
offset_left = 0.46600342
offset_right = 0.46594238
offset_bottom = -0.015991211
size_flags_horizontal = 4
theme = ExtResource("2_ll5ts")
theme_override_font_sizes/font_size = 32
text = "Easy"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1454535102]
stream = ExtResource("3_ll5ts")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="Panel/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="Panel/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="Panel/EasyButton" to="." method="_on_easy_button_pressed"]
